--- a/HibernateJPA/pom.xml
+++ b/HibernateJPA/pom.xml
@@ -28,6 +28,15 @@
 			<version>5.1.38</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>8.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+
+
 		<!-- API, java.xml.bind module -->
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
@@ -35,12 +44,8 @@
 			<version>2.3.2</version>
 		</dependency>
 
-		<!-- Runtime, com.sun.xml.bind module -->
-		<dependency>
-			<groupId>org.glassfish.jaxb</groupId>
-			<artifactId>jaxb-runtime</artifactId>
-			<version>2.3.2</version>
-		</dependency>
+		
+
 
 	</dependencies>
 </project>
